recursion.lessons.recursion.koch.Crab.scala.error
Crab:10: error: not found: value drote
	drote(45)}
        ^